# kasdex

./: .gitignore  AGENTS.md  Cargo.toml  rust-toolchain.toml
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx  styles.css
apps/web/src/api/: client.ts  openapi.json  queryKeys.ts  schema.ts
apps/web/src/app/: App.tsx
apps/web/src/features/dashboard/: RecentBlocks.tsx
apps/web/src/features/indexer/: IndexerStatusPanel.tsx
apps/web/src/features/transactions/: TransactionBrowser.tsx
crates/kasdex-api/: Cargo.toml
crates/kasdex-api/src/: dto.rs  error.rs  lib.rs
crates/kasdex-cli/: Cargo.toml
crates/kasdex-cli/src/: main.rs
crates/kasdex-core/: Cargo.toml
crates/kasdex-core/src/: lib.rs
crates/kasdex-indexer/: Cargo.toml
crates/kasdex-indexer/src/: lib.rs
crates/kasdex-node/: Cargo.toml  build.rs
crates/kasdex-node/src/: lib.rs
crates/kasdex-store/: Cargo.toml
crates/kasdex-store-rocks/: Cargo.toml
crates/kasdex-store-rocks/benches/: store_layout.rs
crates/kasdex-store-rocks/src/: lib.rs
crates/kasdex-store/src/: lib.rs
