[workspace]
members = [
    "crates/kasdex-api",
    "crates/kasdex-cli",
    "crates/kasdex-core",
    "crates/kasdex-indexer",
    "crates/kasdex-node",
    "crates/kasdex-store",
    "crates/kasdex-store-rocks",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/shintosh/kasdex"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.41", default-features = false, features = ["std"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
hex = "0.4.3"
prost = "0.13.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"
tonic-build = "0.12.3"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
