[package]
name = "kasdex-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
hex.workspace = true
kasdex-core = { path = "../kasdex-core" }
kasdex-indexer = { path = "../kasdex-indexer" }
kasdex-store = { path = "../kasdex-store" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
