[package]
name = "kasdex-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "kasdexd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
kasdex-api = { path = "../kasdex-api" }
kasdex-indexer = { path = "../kasdex-indexer" }
kasdex-node = { path = "../kasdex-node" }
kasdex-store-rocks = { path = "../kasdex-store-rocks" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
