[package]
name = "kasdex-indexer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hex.workspace = true
kasdex-node = { path = "../kasdex-node" }
kasdex-store = { path = "../kasdex-store" }
thiserror.workspace = true
