[package]
name = "kasdex-indexer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
kasdex-core = { path = "../kasdex-core" }
kasdex-node = { path = "../kasdex-node" }
kasdex-store = { path = "../kasdex-store" }
thiserror.workspace = true
