[package]
name = "kasdex-store-rocks"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
kasdex-store = { path = "../kasdex-store" }
rocksdb = "0.24.0"

[dev-dependencies]
criterion = "0.7.0"
tempfile.workspace = true

[[bench]]
name = "store_layout"
harness = false
